# juliuscblas

./: CMakeLists.txt
benchmark/: CMakeLists.txt  speedbenchmark.cpp
include/: julius.hpp  julius_asum.hpp  julius_axpby.hpp  julius_dot.hpp  julius_gemm_align.hpp  julius_gemv.hpp  julius_sgemm_align128_raw.inc
include/julius/: julius.hpp  julius_defined.hpp  utils.hpp
include/utils/: cpu.hpp  dllexport.hpp  memory.hpp  simd_instruction_set.hpp  simd_types.hpp
src/: CMakeLists.txt  julius.cpp  julius_asum.cpp  julius_axpby.cpp  julius_dot.cpp  julius_gemm.cpp  julius_gemm.hpp  julius_gemm_align.cpp  julius_gemm_auto.cpp  julius_gemv.cpp  julius_nrm2.cpp  julius_nrm2.hpp  julius_scal.cpp  julius_scal.hpp  julius_sdot.cpp  julius_sdot.hpp  julius_sgemm_align256_raw.inc  julius_test.cpp
src/utils/: cpu.cpp  cpu.hpp  julius_gemm_align.cpp  memory.cpp  memory.hpp  simd_instruction_set.hpp  simd_types.cpp  simd_types.hpp  utils.hpp
test/: CMakeLists.txt  julius_test.cpp  test_sgemv.cpp
